--- a/views/layout.html
+++ b/views/layout.html
@@ -50,7 +50,9 @@
           <ul class="nav navbar-nav">
          
             <li><a href="/about">About</a></li>
-            <li><a href="/routes">Routes</a></li>
+            <li><a href="/agencies">Transit Agencies</a></li> 
+			
+			<!--
             <li class="dropdown">
               <a href="/agencies" class="dropdown-toggle" data-toggle="dropdown">Agencies <b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -61,12 +63,13 @@
                 <li>Chicago MTA/</li>
                 <li>Los Angeles</li>
               </ul>
+				
             </li>
-			
+			 -->
 			 <li><a href="/contact">Contact</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="/map">Transit Map</a></li>
+            <!-- <li class="active"><a href="/map">Transit Map</a></li> -->
         
           </ul>
         </div><!--/.nav-collapse -->
